tests/compile-fail/cases/tainted_through_box_debug.stderr
error[E0277]: `Tainted<Vec<u8>>` doesn't implement `Debug`
 --> cases/tainted_through_box_debug.rs:6:39
  |
6 |     let b: Box<dyn std::fmt::Debug> = Box::new(t);
  |                                       ^^^^^^^^^^^ the trait `Debug` is not implemented for `Tainted<Vec<u8>>`
  |
  = note: required for the cast from `Box<Tainted<Vec<u8>>>` to `Box<dyn Debug>`
